# stdarc.c

./: .gitignore  CMakeLists.txt  README.md  stdarc.c
cmake/: CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
demo/: CMakeLists.txt  demo_dir.c  demo_pak.c  demo_tar.c  demo_vfs.c  demo_zip.c
src/: CMakeLists.txt  _amalgamate.c  arc.h  dir.c  pak.c  tar.c  vfs.c  zip.c
